lib/bait/tests/inout_error/struct/immut_field_nested.in.bt
struct Alpha {
	b Bravo
}

struct Bravo {
mut:
	x i32
}

mut a := Alpha{}
a.b.x = 2
